# wasm_webgl2

./: Cargo.toml
html/: index.html
shader/: vertex_shader.glsl
src/: lib.rs
static/: vertex_shader.glsl
